--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,9 @@ typeMismatch=\uC62C\uBC14\uB978 \uD0C0\uC785\uC744 \uC785\uB825\uD558\uC138\uC69
 # \uC5EC\uAE30\uC11C\uC758 vo\uB294 \uBAA8\uB378\uC5D0 \uAC12\uC744 \uB2F4\uC544\uB118\uAE30\uB294 vo
 # ValidVO\uC5D0\uC11C \uC801\uC5B4\uB454 \uBA54\uC138\uC9C0\uAC00 \uD544\uC694\uC5C6\uC5B4\uC9D0
 NotBlank.vo.name=name is required
+NotNull.vo.salary=salary is required
+Patten.vo.phone=phone number format
+Email.vo.email=email type format
+
+Pattern.vo.id=\uC544\uC774\uB514\uB294 \uC601\uBB38, \uC22B\uC790 \uD3EC\uD568 8\uAE00\uC790 \uC774\uC0C1\uC785\uB2C8\uB2E4.
+Pattern.vo.pw=\uBE44\uBC00\uBC88\uD638\uB294 \uC601\uBB38, \uC22B\uC790, \uD2B9\uBB38 \uD3EC\uD568 8\uAE00\uC790 \uC774\uC0C1\uC785\uB2C8\uB2E4.
